complete basic layout of about page with some extended updates: dquote> - add gatsby-plugin-image dquote>temporarily create & use image.tsx component to render avatar + add profile picture to /images - adjust header scroll effect to smaller y-offset value - adjust MainLayout to allow using className - disable triangle deco on small screen in homepage/blog section & clean up code in the same component - update props passed to Triangle pattern in hero section - fix service card height (responsive height)

--- a/src/components/layouts/main-layout/styles.scss
+++ b/src/components/layouts/main-layout/styles.scss
@@ -19,6 +19,7 @@ html {
 }
 
 #main-layout {
+  position: relative;
   display: grid;
   min-height: 100vh;
   grid-template-rows: minmax(auto, 100px) 1fr minmax(auto, 100px);
@@ -31,7 +32,8 @@ html {
 #body {
   grid-row: 2/3;
   // background: green;
-  min-height: 90vh;
+  // min-height: 90vh;
+  height: 100%;
   padding-top: 3em;
   padding-bottom: 1.5em;
   @media screen and (min-width: 960px) {
